--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Title of the document</title>
-</head>
-
 <body>
-The content of the document......
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
-
 </html>
